--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
         <title>KokonutsX NFT Project</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="icon" href="assets/kokoraw-final.png" type="image">
 
     </head>
 
@@ -27,11 +28,15 @@
             </div>
         </section>
 
+        <section class="banner">
+            <img src="assets/KOKO banner.png" alt="">
+        </section>
+
         <section class="about">
             <div class="words">
                 <h1>ABOUT US</h1>
                 <div class="para">
-                    <p>This is an NFT project. one like you have NEVER seen! we are selling gifs, "many people do that" u may thing, but these gifs are used in daily conversations.
+                    <p>This is an NFT project. one like you have NEVER seen! we are selling gifs, "many people do that" u may think, but these gifs are used in daily conversations.
                     </p>
                     <p>
                         They are used in my servers with over a thousand members and increasing, it is also spreading from my server to others! Their usage is increasing every day and so does their popularity!
@@ -44,6 +49,15 @@
             </div>
         </section>
 
+        <section class="media">
+            <div class="mediaT"><h1>CHECK US OUT AT:</h1></div>
+            <div>
+                <a href="https://dsc.gg/kokosmp/" target=”_blank”><img src="assets/discord.png" alt=""></a>
+                <a href="https://opensea.io/KOKONUTSX" target=”_blank”><img src="assets/opensea.png" alt=""></a>
+                <a href="https://twitter.com/KokonutsX" target=”_blank”><img src="assets/twitter.png" alt=""></a>
+            </div>
+        </section>
+        <section class="footer"> website by: Pranesh Sankar | email: praneshsankarm@gmail.com </section>
 
     </body>
 
